--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "@supabase/supabase-js": "^2.58.0",
-    "@vitejs/plugin-react": "^5.1.2",
-    "vite": "^7.3.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "@supabase/supabase-js": "^2.89.0",
+    "vite": "^7.3.0",
+    "@vitejs/plugin-react": "^5.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
